# becrypt

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
