[package]
name = "becrypt"
version = "0.2.2"
edition = "2021"
authors = ["360tetsu360"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8"
byteorder = "1.4"
cfb8 = "0.8"
cipher = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.0.0"
clap = { version = "4.3.11", features = ["derive"] }
rand = "0.8"
proc_mem = "0.1.4"
directories = "5.0.1"
base64 = "0.21.2"
sha2 = "0.10.7"
log = "0.4"
env_logger = "0.10.0"
colored = "2.0.4"
fs_extra = "1.3.0"